# software-renderer

./: CMakeLists.txt  LICENSE  README.md  drawing_utils.cpp  drawing_utils.h  main.cpp  math_utils.cpp  math_utils.h  obj_model.cpp  obj_model.h  ppm_image.cpp  ppm_image.h  render.sh
assets/: grid.ppm
include/: camera.h  drawing_target.h  drawing_utils.h  fallback_image.h  image_buffer.h  math_utils.h  math_vector.h  matrix.h  obj_model.h  ppm_image.h  realtime_target.h  triangle.h
include/shader/: gouraud.h
src/: CMakeLists.txt  camera.cpp  drawing_utils.cpp  image_buffer.cpp  main.cpp  math_utils.cpp  obj_model.cpp  ppm_image.cpp  realtime_target.cpp
tests/: CMakeLists.txt  test_matrix.cpp  test_vector.cpp
